--- a/hw-03/answer_exercise_1/ingress-secret.yaml
+++ b/hw-03/answer_exercise_1/ingress-secret.yaml
@@ -5,8 +5,12 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  tls:
+  - hosts:
+      - eduardoguadalupe.developerlasalle.com
+    secretName: nginx-secret
   rules:
-    - host: "eduardoguadalupe.developerlasalle.com"
+    - host: eduardoguadalupe.developerlasalle.com
       http:
         paths:
           - path: /
